cocas/assembler/generated/MacroParser.py
# Generated from assembler/grammar/Macro.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MacroParser ( Parser ):

    grammarFileName = "Macro.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'macro'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'*'", "','", "<INVALID>", "'?'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'/'", "'''", 
                     "'$'" ]

    symbolicNames = [ "<INVALID>", "Macro", "MACRO_FOOTER", "WS", "NEWLINE", 
                      "COMMENT", "ASTERISK", "COMMA", "LABEL_END", "QUESTION_MARK", 
                      "STRING", "CHAR", "NAME", "DIGIT", "SLASH", "APOSTROPHE", 
                      "DOLLAR_SIGN", "OTHER" ]

    RULE_mlb = 0
    RULE_mlb_macro = 1
    RULE_mlb_header = 2
    RULE_program = 3
    RULE_macro = 4
    RULE_macro_header = 5
    RULE_macro_body = 6
    RULE_line = 7
    RULE_labels = 8
    RULE_first_param = 9
    RULE_label = 10
    RULE_param = 11
    RULE_instruction = 12
    RULE_l_sep = 13
    RULE_p_sep = 14
    RULE_macro_piece = 15
    RULE_macro_variable = 16
    RULE_macro_text = 17
    RULE_macro_param = 18
    RULE_macro_nonce = 19

    ruleNames =  [ "mlb", "mlb_macro", "mlb_header", "program", "macro", 
                   "macro_header", "macro_body", "line", "labels", "first_param", 
                   "label", "param", "instruction", "l_sep", "p_sep", "macro_piece", 
                   "macro_variable", "macro_text", "macro_param", "macro_nonce" ]

    EOF = Token.EOF
    Macro=1
    MACRO_FOOTER=2
    WS=3
    NEWLINE=4
    COMMENT=5
    ASTERISK=6
    COMMA=7
    LABEL_END=8
    QUESTION_MARK=9
    STRING=10
    CHAR=11
    NAME=12
    DIGIT=13
    SLASH=14
    APOSTROPHE=15
    DOLLAR_SIGN=16
    OTHER=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MlbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MacroParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MacroParser.NEWLINE)
            else:
                return self.getToken(MacroParser.NEWLINE, i)

        def mlb_macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.Mlb_macroContext)
            else:
                return self.getTypedRuleContext(MacroParser.Mlb_macroContext,i)


        def getRuleIndex(self):
            return MacroParser.RULE_mlb

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlb" ):
                return visitor.visitMlb(self)
            else:
                return visitor.visitChildren(self)




    def mlb(self):

        localctx = MacroParser.MlbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mlb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 40
                self.match(MacroParser.NEWLINE)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==6:
                self.state = 46
                self.mlb_macro()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(MacroParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mlb_macroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mlb_header(self):
            return self.getTypedRuleContext(MacroParser.Mlb_headerContext,0)


        def macro_body(self):
            return self.getTypedRuleContext(MacroParser.Macro_bodyContext,0)


        def getRuleIndex(self):
            return MacroParser.RULE_mlb_macro

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlb_macro" ):
                return visitor.visitMlb_macro(self)
            else:
                return visitor.visitChildren(self)




    def mlb_macro(self):

        localctx = MacroParser.Mlb_macroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mlb_macro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.mlb_header()
            self.state = 55
            self.macro_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mlb_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASTERISK(self):
            return self.getToken(MacroParser.ASTERISK, 0)

        def NAME(self):
            return self.getToken(MacroParser.NAME, 0)

        def SLASH(self):
            return self.getToken(MacroParser.SLASH, 0)

        def DIGIT(self):
            return self.getToken(MacroParser.DIGIT, 0)

        def NEWLINE(self):
            return self.getToken(MacroParser.NEWLINE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MacroParser.WS)
            else:
                return self.getToken(MacroParser.WS, i)

        def getRuleIndex(self):
            return MacroParser.RULE_mlb_header

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlb_header" ):
                return visitor.visitMlb_header(self)
            else:
                return visitor.visitChildren(self)




    def mlb_header(self):

        localctx = MacroParser.Mlb_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mlb_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 57
                self.match(MacroParser.WS)


            self.state = 60
            self.match(MacroParser.ASTERISK)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 61
                self.match(MacroParser.WS)


            self.state = 64
            self.match(MacroParser.NAME)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 65
                self.match(MacroParser.WS)


            self.state = 68
            self.match(MacroParser.SLASH)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 69
                self.match(MacroParser.WS)


            self.state = 72
            self.match(MacroParser.DIGIT)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 73
                self.match(MacroParser.WS)


            self.state = 76
            self.match(MacroParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MacroParser.EOF, 0)

        def macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.MacroContext)
            else:
                return self.getTypedRuleContext(MacroParser.MacroContext,i)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.LineContext)
            else:
                return self.getTypedRuleContext(MacroParser.LineContext,i)


        def getRuleIndex(self):
            return MacroParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MacroParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 245658) != 0):
                self.state = 80
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 78
                    self.macro()
                    pass

                elif la_ == 2:
                    self.state = 79
                    self.line()
                    pass


                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(MacroParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def macro_header(self):
            return self.getTypedRuleContext(MacroParser.Macro_headerContext,0)


        def macro_body(self):
            return self.getTypedRuleContext(MacroParser.Macro_bodyContext,0)


        def MACRO_FOOTER(self):
            return self.getToken(MacroParser.MACRO_FOOTER, 0)

        def getRuleIndex(self):
            return MacroParser.RULE_macro

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacro" ):
                return visitor.visitMacro(self)
            else:
                return visitor.visitChildren(self)




    def macro(self):

        localctx = MacroParser.MacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_macro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.macro_header()
            self.state = 88
            self.macro_body()
            self.state = 89
            self.match(MacroParser.MACRO_FOOTER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Macro_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Macro(self):
            return self.getToken(MacroParser.Macro, 0)

        def NAME(self):
            return self.getToken(MacroParser.NAME, 0)

        def SLASH(self):
            return self.getToken(MacroParser.SLASH, 0)

        def DIGIT(self):
            return self.getToken(MacroParser.DIGIT, 0)

        def NEWLINE(self):
            return self.getToken(MacroParser.NEWLINE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MacroParser.WS)
            else:
                return self.getToken(MacroParser.WS, i)

        def getRuleIndex(self):
            return MacroParser.RULE_macro_header

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacro_header" ):
                return visitor.visitMacro_header(self)
            else:
                return visitor.visitChildren(self)




    def macro_header(self):

        localctx = MacroParser.Macro_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_macro_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 91
                self.match(MacroParser.WS)


            self.state = 94
            self.match(MacroParser.Macro)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 95
                self.match(MacroParser.WS)


            self.state = 98
            self.match(MacroParser.NAME)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 99
                self.match(MacroParser.WS)


            self.state = 102
            self.match(MacroParser.SLASH)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 103
                self.match(MacroParser.WS)


            self.state = 106
            self.match(MacroParser.DIGIT)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 107
                self.match(MacroParser.WS)


            self.state = 110
            self.match(MacroParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Macro_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.LineContext)
            else:
                return self.getTypedRuleContext(MacroParser.LineContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MacroParser.NEWLINE)
            else:
                return self.getToken(MacroParser.NEWLINE, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MacroParser.WS)
            else:
                return self.getToken(MacroParser.WS, i)

        def getRuleIndex(self):
            return MacroParser.RULE_macro_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacro_body" ):
                return visitor.visitMacro_body(self)
            else:
                return visitor.visitChildren(self)




    def macro_body(self):

        localctx = MacroParser.Macro_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_macro_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 117
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        self.state = 113
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==3:
                            self.state = 112
                            self.match(MacroParser.WS)


                        self.state = 115
                        self.match(MacroParser.NEWLINE)
                        pass

                    elif la_ == 2:
                        self.state = 116
                        self.line()
                        pass

             
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labels(self):
            return self.getTypedRuleContext(MacroParser.LabelsContext,0)


        def NEWLINE(self):
            return self.getToken(MacroParser.NEWLINE, 0)

        def instruction(self):
            return self.getTypedRuleContext(MacroParser.InstructionContext,0)


        def first_param(self):
            return self.getTypedRuleContext(MacroParser.First_paramContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MacroParser.COMMA)
            else:
                return self.getToken(MacroParser.COMMA, i)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.ParamContext)
            else:
                return self.getTypedRuleContext(MacroParser.ParamContext,i)


        def getRuleIndex(self):
            return MacroParser.RULE_line

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = MacroParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.labels()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 245250) != 0):
                self.state = 123
                self.instruction()
                self.state = 124
                self.first_param()


            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 128
                self.match(MacroParser.COMMA)
                self.state = 129
                self.param()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(MacroParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.LabelContext)
            else:
                return self.getTypedRuleContext(MacroParser.LabelContext,i)


        def WS(self):
            return self.getToken(MacroParser.WS, 0)

        def getRuleIndex(self):
            return MacroParser.RULE_labels

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabels" ):
                return visitor.visitLabels(self)
            else:
                return visitor.visitChildren(self)




    def labels(self):

        localctx = MacroParser.LabelsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_labels)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 137
                    self.label() 
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 143
                self.match(MacroParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class First_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self):
            return self.getToken(MacroParser.WS, 0)

        def param(self):
            return self.getTypedRuleContext(MacroParser.ParamContext,0)


        def getRuleIndex(self):
            return MacroParser.RULE_first_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFirst_param" ):
                return visitor.visitFirst_param(self)
            else:
                return visitor.visitChildren(self)




    def first_param(self):

        localctx = MacroParser.First_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_first_param)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(MacroParser.WS)
                self.state = 147
                self.param()
                pass
            elif token in [4, 7]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL_END(self):
            return self.getToken(MacroParser.LABEL_END, 0)

        def macro_piece(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.Macro_pieceContext)
            else:
                return self.getTypedRuleContext(MacroParser.Macro_pieceContext,i)


        def l_sep(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.L_sepContext)
            else:
                return self.getTypedRuleContext(MacroParser.L_sepContext,i)


        def macro_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.Macro_variableContext)
            else:
                return self.getTypedRuleContext(MacroParser.Macro_variableContext,i)


        def getRuleIndex(self):
            return MacroParser.RULE_label

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = MacroParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,24,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 160
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [1, 10, 11, 12, 13, 15, 16]:
                        self.state = 151
                        self.macro_piece()
                        pass
                    elif token in [9]:
                        self.state = 153 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 152
                            self.macro_variable()
                            self.state = 155 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==9):
                                break

                        self.state = 157
                        self.l_sep()
                        pass
                    elif token in [3, 7, 17]:
                        self.state = 159
                        self.l_sep()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 164
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,24,self._ctx)

            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 165
                self.macro_variable()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(MacroParser.LABEL_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def macro_piece(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.Macro_pieceContext)
            else:
                return self.getTypedRuleContext(MacroParser.Macro_pieceContext,i)


        def p_sep(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.P_sepContext)
            else:
                return self.getTypedRuleContext(MacroParser.P_sepContext,i)


        def macro_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.Macro_variableContext)
            else:
                return self.getTypedRuleContext(MacroParser.Macro_variableContext,i)


        def getRuleIndex(self):
            return MacroParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MacroParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,28,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 182
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [1, 10, 11, 12, 13, 15, 16]:
                        self.state = 173
                        self.macro_piece()
                        pass
                    elif token in [9]:
                        self.state = 175 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 174
                            self.macro_variable()
                            self.state = 177 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==9):
                                break

                        self.state = 179
                        self.p_sep()
                        pass
                    elif token in [3, 17]:
                        self.state = 181
                        self.p_sep()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 186
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,28,self._ctx)

            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 187
                self.macro_variable()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION_MARK(self):
            return self.getToken(MacroParser.QUESTION_MARK, 0)

        def macro_piece(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.Macro_pieceContext)
            else:
                return self.getTypedRuleContext(MacroParser.Macro_pieceContext,i)


        def OTHER(self, i:int=None):
            if i is None:
                return self.getTokens(MacroParser.OTHER)
            else:
                return self.getToken(MacroParser.OTHER, i)

        def macro_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MacroParser.Macro_variableContext)
            else:
                return self.getTypedRuleContext(MacroParser.Macro_variableContext,i)


        def getRuleIndex(self):
            return MacroParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = MacroParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,35,self._ctx)
            if la_ == 1:
                self.state = 202 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 202
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [1, 10, 11, 12, 13, 15, 16]:
                            self.state = 193
                            self.macro_piece()
                            pass
                        elif token in [9]:
                            self.state = 195 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while True:
                                self.state = 194
                                self.macro_variable()
                                self.state = 197 
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)
                                if not (_la==9):
                                    break

                            self.state = 199
                            self.match(MacroParser.OTHER)
                            pass
                        elif token in [17]:
                            self.state = 201
                            self.match(MacroParser.OTHER)
                            pass
                        else:
                            raise NoViableAltException(self)


                    else:
                        raise NoViableAltException(self)
                    self.state = 204 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,32,self._ctx)

                self.state = 209
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,33,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 206
                        self.macro_variable() 
                    self.state = 211
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,33,self._ctx)

                pass

            elif la_ == 2:
                self.state = 213 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 212
                        self.macro_variable()

                    else:
                        raise NoViableAltException(self)
                    self.state = 215 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,34,self._ctx)

                pass


            self.state = 220
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 219
                self.match(MacroParser.QUESTION_MARK)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_sepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OTHER(self):
            return self.getToken(MacroParser.OTHER, 0)

        def WS(self):
            return self.getToken(MacroParser.WS, 0)

        def COMMA(self):
            return self.getToken(MacroParser.COMMA, 0)

        def getRuleIndex(self):
            return MacroParser.RULE_l_sep

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_sep" ):
                return visitor.visitL_sep(self)
            else:
                return visitor.visitChildren(self)




    def l_sep(self):
